# dune-map-api

./: CMakeLists.txt
data/tileset/: tileset.json
include/: abstract_history_stack.h  block_placer.cpp  block_placer.h  block_set.h  change_tracker.h  compatible_checker.cpp  compatible_checker.h  directed_edge.h  directional_line.h  edge.h  file_checks.h  file_reader.h  four_side_wall.h  global.h  history_stack.h  library.h  line.cpp  line.h  located_state.h  located_tile.h  location.h  map.h  map_bin_file.h  map_bin_file_io.h  map_bin_io.h  material.h  painter.h  palette.h  priority_map.h  smart_map.h  square_zone.h  tile.h  tileset_json_i.h  tileset_properties.h  util.h  wall.h  wall_base.h  wall_pattern.h  wall_segment.h
src/: CMakeLists.txt  library.cpp
src/file/: file_checks.cpp  file_reader.cpp  map_bin_file.cpp  map_bin_file_io.cpp  map_bin_io.cpp  tileset_json_i.cpp
src/global/: global.cpp  util.cpp
src/paint/: painter.cpp
src/structures/: located_tile.cpp  location.cpp  map.cpp  priority_map.cpp  smart_map.cpp  square_zone.cpp  wall.cpp
src/tileset/: tileset_properties.cpp
src/tileset/algorithm/: history_stack.cpp
src/tileset/blocks/: block_placer.cpp  block_set.cpp  compatible_checker.cpp  directed_edge.cpp  directional_line.cpp  edge.cpp
src/tileset/palette/: material.cpp  palette.cpp
test/: CMakeLIsts.txt  first_test.cpp
